fixed vanishing course selection button. cleaned up course tab scrollbar

--- a/src/app/course-tabs/course-tabs/course-tabs.component.css
+++ b/src/app/course-tabs/course-tabs/course-tabs.component.css
@@ -1,3 +1,7 @@
+.tabs-container ::-webkit-scrollbar {
+    height: 5px;
+}
+
 .tabs {
     height: var(--breadcrumbs-height) !important;
 }
